2000-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (which_seg):  Use SCM2PTR to convert a non immediate SCM
	variable into a pointer to a heap cell.

	* gc.c (scm_mark_locations, scm_cellp, init_heap_seg,
	scm_unhash_name):  Remove redundant cast to SCM_CELLPTR.

2000-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* print.c (scm_iprin1):  Don't assign zero to SCM values, use
	SCM_UNDEFINED instead.

	* weaks.c (scm_make_weak_vector):  Fix assignment of zero to a
	vector element.  (Still to be improved)

2000-04-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (undef_cell):  Removed, replaced by:

	(undef_object):  Added to replace undef_cell.

	(scm_lookupcar, scm_lookupcar1):  Use undef_object.

	* eval.c (scm_lookupcar, scm_lookupcar1, scm_m_atfop,
	scm_m_atbind, CHECK_EQVISH, SCM_CEVAL), procs.h (SCM_SETCODE):
	Don't perform arithmetic operations with SCM values.

	* eval.c (scm_lookupcar, scm_lookupcar1, scm_m_atfop,
	scm_m_atbind, scm_eval_args, scm_deval_args, SCM_CEVAL):  Use
	symbolic names for the tc3 type codes.

	* eval.c (scm_m_define, SCM_CEVAL, SCM_APPLY):  Remove redundant
	cast to SCM.

	* eval.c (scm_eval_args, scm_deval_args, SCM_CEVAL):  Made the
	access of the struct vcell element explicit.

2000-04-19  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* struct.c (scm_struct_free_light, scm_struct_free_standard,
	scm_struct_free_entity): Use `scm_must_free' instead of	`free'.

	* procs.c (scm_make_subr_opt): Tell scm_must_realloc that we're
	realloc:ing scm_subr_table ("what" instead of "who").

	* numbers.c (scm_adjbig): Ditto.

2000-04-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* unif.c (l2ra):  Don't eliminate the call to scm_array_set_x
	itself, as was done in the previous 'patch'.  (Thanks to Radey
	Shouman)

2000-04-18  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* options.c (scm_options), read.c (recsexpr):  Remove redundant
	SCM_IMP test.

	* print.c (scm_iprin1):  Made the access of the struct vcell
	element explicit.
